# nasa-api-first-poc

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PRP.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: documentation.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: README.md  main-protection.json
.github/workflows/: actions-security.yml  automerge.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  pr-review.yml  scorecard.yml  supply-chain.yml
client/: README.md  query_supply_risk.py
data/: README.md  classification.yml  synthetic_data.py
data/sample/: artemis_materials.csv  artemis_procurement_DATA_DICTIONARY.md  artemis_purchase_orders.csv  artemis_supply_risk.csv  artemis_vendors.csv
databricks/: run_notebook.py
databricks/notebooks/: 01_zero_move_medallion.ipynb  01_zero_move_medallion.py
databricks/sql/: dbsql_samples.sql
docs/: ADD-A-SOURCE.md  API.md  APIM-CAPABILITIES.md  APIM-EDITION.md  ARCHITECTURE.md  ART-OF-THE-POSSIBLE.md  AZURE-DEPLOYMENT.md  AZURE-LIVE-DEPLOYMENT.md  DATABRICKS-WALKTHROUGH.md  DEMO-COMPLETE.md  DEMO-DAY.md  DEMO-SCRIPT.md  DISCLAIMER.md  GITHUB-FEATURES.md  GLOSSARY.md  GRAPHQL.md  LOCAL-DEV.md  POWERBI-GUIDE.md  README.md  SECURITY.md  SOFTWARE-ASSURANCE.md  ZERO-MOVE.md  architecture.excalidraw
docs/concepts/: 01-the-big-idea.md  02-api-gateways.md  03-data-api-builder.md  04-identity-jwt-oauth.md  05-lakehouse-databricks.md  06-observability-and-security.md  07-mcp-and-agents.md  README.md
docs/whitepapers/: 01_executive_concept_paper.md  02_technical_api_first_companion.md  03_artemis_worked_example.md  05_june24_preread.md  (+3 more)
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
observability/: prometheus.yml
powerbi/: .gitignore  ArtemisSupplyRisk.pbip  README.md
scripts/: azure-deploy-apim.sh  azure-deploy-fullstack.sh  azure-deploy.sh  azure-teardown.sh  demo.sh  gen-architecture-diagram.py  wait-for-healthy.sh
tests/: README.md  conftest.py  test_discovery.py  test_federation.py  test_gateway_auth.py  test_no_fabric.py  test_redaction.py  test_registry_config.py  test_supply_risk.py  test_zero_move.py
tools/: README.md  azure_pricing.py  export_powerbi.py  make_powerbi_pbip.py  make_product_blueprints.py  publish_powerbi.py
(+94 files in other folders)
